# 20-20-20-helper

./: CMakeLists.txt  README.md  checkScreenStatus.sh
include/: Timer.h  TwentyTwentyTwentyNotificationManger.h  TwentyTwentyTwentyScreenLockChecker.h  TwentyTwentyTwentyTimer.h  TwentyTwentyTwentyWindow.h
src/: Timer.cpp  TwentyTwentyTwentyNotificationManger.cpp  TwentyTwentyTwentyScreenLockChecker.cpp  TwentyTwentyTwentyTimer.cpp  TwentyTwentyTwentyWindow.cpp  main.cpp
test/: CMakeLists.txt  HelloworldTestCase.cpp  testTwentyTwentyTwentyScreenLockChecker.cpp  testTwentyTwentyTwentyTimer.cpp
